--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "procstreams"
-  , "version": "0.1.0"
+  , "version": "0.2.0"
   , "description": "a little experiment with shell scripting in node"
   , "url": "https://github.com/polotek/procstreams"
   , "keywords": [
@@ -13,11 +13,11 @@
   , "author": "polotek (Marco Rogers)"
   , "main": "./procstreams.js"
   , "dependencies": {
-    "inherits": "1"
+    "inherits": "~1.0"
   }
   , "engines": {
-      "node": "0.4 || 0.6"
-    }
+    "node": "0.4 || 0.6"
+  }
   , "scripts": {
     "test": "tests/run_tests.sh"
   }
