--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   , "main": "./procstreams.js"
   , "dependencies": {
     "inherits": "~1.0"
+    , "shell-quote": "*"
   }
   , "engines": {
     "node": "0.4 || 0.6"
