--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   , "dependencies": {
     "inherits": "~1.0"
     , "shell-quote": "*"
+    , "data-collector-stream": "*"
   }
   , "engines": {
     "node": "0.4 || 0.6"
