add `end` event for last callback

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     , "shell-quote": "*"
     , "data-collector-stream": "*"
     , "semver": "*"
+    , "sinon": "*"
   }
   , "devDependencies": {
     "tap": "*"
